Project

General

Profile

Actions

Bug #59208

closed

wrong attribute for rbd_quiesce_complete api

Added by Yang Dongsheng about 1 year ago. Updated 10 months ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
pacific,quincy
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When we use rbd_quiesce_complete api, we got an error: /usr/bin/ld: undefined reference to `rbd_quiesce_complete'

Then we found the problem is the symbol of rbd_quiesce_complete in librbd.so is LOCAL. After some investigation, we found the attribute of rbd_quiesce_complete api is CEPH_RADOS_API rather than expected CEPH_RBD_API.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #59212: pacific: wrong attribute for rbd_quiesce_complete apiResolvedIlya DryomovActions
Copied to rbd - Backport #59213: quincy: wrong attribute for rbd_quiesce_complete apiResolvedIlya DryomovActions
Actions #1

Updated by Mykola Golub about 1 year ago

  • Status changed from New to Fix Under Review
  • Backport set to reef,quincy
  • Pull request ID set to 50735
Actions #2

Updated by Ilya Dryomov about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
  • Assignee set to Yang Dongsheng
  • Backport changed from reef,quincy to pacific,quincy
Actions #3

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59212: pacific: wrong attribute for rbd_quiesce_complete api added
Actions #4

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59213: quincy: wrong attribute for rbd_quiesce_complete api added
Actions #5

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #6

Updated by Mykola Golub about 1 year ago

Don't we need to backport this to reef too?

Actions #7

Updated by Ilya Dryomov about 1 year ago

Mykola Golub wrote:

Don't we need to backport this to reef too?

We do -- I'll do it in a batch with other reef PRs.

Actions #8

Updated by Backport Bot 10 months ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF